hphp/hack/test/typecheck/abstract_typeconsts/enforceable_inherited_no_duplicate.php.exp
ERROR: File "enforceable_inherited_no_duplicate.php", line 10, characters 14-18:
Invalid type (Typing[4302])
  File "enforceable_inherited_no_duplicate.php", line 5, characters 5-17:
  Type constant `TType` was declared `__Enforceable` here
  File "enforceable_inherited_no_duplicate.php", line 10, characters 37-47:
  This type is not enforceable because it has a type with an erased generic type argument
